Add css selectors for english version and remove unused commented lines in index.php

--- a/scss/partials/_menus.scss
+++ b/scss/partials/_menus.scss
@@ -206,7 +206,9 @@
 }
 
 .item-856,
-.item-848 {
+.item-848,
+.item-945,
+.item-959 {
   position: inherit;
 
   .dropdown-menu {
@@ -265,7 +267,8 @@
   }
 }
 
-.item-848 {
+.item-848,
+.item-945 {
   .dropdown-menu {
     &.show {
       width: 60%;
